--- a/project_document.Rmd
+++ b/project_document.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "U6614 Final Project Proposal — Deliverable 2"
+title: "U6614 Final Project Document — Deliverable #"
 author: "Neil Chin (nkc2124) & Nicole Yahui Wu (yw3551)"
 date: '`r Sys.Date()`'
 output:
